# i3tailscale-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  tailscale.rs
