[package]
name = "i3tailscale"
version = "0.1.0"
edition = "2024"
description = "Tailscale status/toggle/peer-picker for i3status-rust"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.6.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
